[gd_scene load_steps=3 format=3 uid="uid://5w0kriffqk6q"]

[ext_resource type="Script" uid="uid://cn4j1tlw463r0" path="res://components/tower_placement_shadow.gd" id="1_2xblr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xblr"]
size = Vector2(510, 486)

[node name="TowerPlacementShadow" type="Area2D" groups=["tower_placement_shadow"]]
collision_layer = 0
script = ExtResource("1_2xblr")

[node name="ColorRectOK" type="ColorRect" parent="."]
offset_left = -249.0
offset_top = -248.0
offset_right = 260.0
offset_bottom = 238.0
color = Color(1, 1, 0, 0.156863)

[node name="ColorRectNG" type="ColorRect" parent="."]
offset_left = -249.0
offset_top = -248.0
offset_right = 260.0
offset_bottom = 238.0
color = Color(1, 0, 0, 0.156863)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7, -5)
shape = SubResource("RectangleShape2D_2xblr")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
